--- a/lib/index.html
+++ b/lib/index.html
@@ -6,7 +6,7 @@
 
   </head>
   <body>
-    <div id="ebsco_widget" style="border:solid #BBBBBB 1px; position: absolute; top: 200px; bottom: 200px; left: 200px; right: 200px;"></div>
+    <div id="ebsco_widget" style="border:solid #BBBBBB 1px; position: absolute; top: 20px; bottom: 300px; left: 200px; right: 200px; overflow: auto;"></div>
     <script>
 'use strict';
 document.onreadystatechange = function () {
