--- a/lib/index.html
+++ b/lib/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Webpack App</title>
+    <title>EBSCO Widget dev</title>
 
   </head>
   <body>
-    <div id="ebsco_widget" style="border:solid #BBBBBB 1px; width:800px; position: absolute; top: 20px; bottom: 300px; left: 200px; right: 200px; overflow: auto;"></div>
+    <div id="ebsco_widget" style="border:solid #BBBBBB 1px; position: absolute; top: 20px; bottom: 300px; left: 200px; right: 200px; overflow: auto;"></div>
     <script>
 'use strict';
 document.onreadystatechange = function () {
