upgrade react to 16 applying code mod and deactivating broken css transition for now

--- a/lib/index.html
+++ b/lib/index.html
@@ -7,9 +7,10 @@
   </head>
   <body>
     <div id="ebsco_widget" style="border:solid #BBBBBB 1px; position: absolute; top: 20px; bottom: 300px; left: 200px; right: 200px; overflow: auto;"></div>
-    <script src="node_modules/babel-polyfill/dist/polyfill.js"></script>
-    <script src="node_modules/react/dist/react-with-addons.js"></script>
-    <script src="node_modules/react-dom/dist/react-dom.js"></script>
+    <!-- <script src="node_modules/babel-polyfill/dist/polyfill.js"></script> -->
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <!-- <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script> -->
     <script>
 'use strict';
 document.onreadystatechange = function () {
