--- a/lib/index.html
+++ b/lib/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="ebsco_widget" style="border:solid #BBBBBB 1px; position: absolute; top: 20px; bottom: 300px; left: 200px; right: 200px; overflow: auto;"></div>
+    <script src="node_modules/babel-polyfill/dist/polyfill.js"></script>
     <script src="node_modules/react/umd/react.development.js"></script>
     <script src="node_modules/react-dom/umd/react-dom.development.js"></script>
     <script>
