add new portal for connect button

--- a/lib/index.html
+++ b/lib/index.html
@@ -6,7 +6,8 @@
 
   </head>
   <body>
-    <div id="ebsco_widget_header" style="position: absolute; top: 0px; right: 20px; overflow: auto;"></div>
+    <div id="ebsco_widget_connection" style="position: absolute; top: 0px; right: 20px; overflow: auto;"></div>
+    <div id="ebsco_widget_header" style="position: absolute; top: 0px; left: 20px; overflow: auto;"></div>
     <div id="ebsco_widget" style="border:solid #BBBBBB 1px; position: absolute; top: 120px; bottom: 100px; left: 200px; right: 200px; overflow: auto;"></div>
     <script src="node_modules/babel-polyfill/dist/polyfill.js"></script>
     <script src="node_modules/react/umd/react.development.js"></script>
