--- a/lib/index.html
+++ b/lib/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>EBSCO Widget dev</title>
-
+    <link href="https://fonts.googleapis.com/css?family=DM+Sans:400,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="ebsco_widget_header" style="position: absolute; top: 0px; left: 20px; overflow: auto;"></div>
