Fix: User menu localdev

--- a/lib/index.html
+++ b/lib/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=DM+Sans:400,700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="ebsco_widget_header" style="position: absolute; top: 0; left:0; right:0; height:120px; background-color:#0050A0"></div>
+    <div id="ebsco_widget_header" style="position: absolute; top: 0; left:0; right:0; height:120px; background-color:#0050A0; padding-right:40px"></div>
     <div id="ebsco_widget" style="position: absolute; top: 120px; bottom: 100px; left: 0; right:0; overflow: auto;"></div>
     <script src="node_modules/babel-polyfill/dist/polyfill.js"></script>
     <script src="node_modules/react/umd/react.development.js"></script>
